--- a/style.css
+++ b/style.css
@@ -397,7 +397,7 @@ input:required {
   width: 40px;
   height: 40px;
   bottom: 40px;
-  background-color: #fff;
+  background-color: #ff8872;
   color: #ffffff;
   text-align: center;
   -webkit-transition-duration: 500ms;
